fixed main content clipping into footer

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -56,7 +56,7 @@ nav li{
     border-color: #dddddd;
     border-width: 2px;
     max-width: 960px;
-    margin: 50px auto 50px;
+    margin: 80px auto;
     background-color: #ffffff;
     
     
@@ -89,8 +89,8 @@ nav li{
     width: 100%;
     height:60px;
     border-top: 8px solid #4aaaa5; 
-    position: absolute; 
-    left: 0 ; right: 0; bottom: 0; 
+    /*position: absolute; 
+    left: 0 ; right: 0; bottom: 0; */
     
     /* this seems to work except on the contact/portfolio page where the content is large and touches the bottom.  this portion of the homework was the most difficult and I can't get it to work properly. */
 }
